Fix dark mode

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -110,20 +110,7 @@ html {
     height: 40px;
 }
 
-body {
-    margin: 0;
-    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: rgb(33 37 41);
-    text-align: left;
-    background-color: white;
-}
 
-.content-wrapper {
-    background-color: white;
-}
 
 .card-header {
     background-color: rgb(0 0 0 / 0%);
